Correct alignment of icons to footer navigation

--- a/_assets/scss/components/_footer.scss
+++ b/_assets/scss/components/_footer.scss
@@ -31,7 +31,7 @@
 .nav-footer {
     display: inline-block;
     float: left;
-    margin-left: 1em;
+    margin: 15px 0 15px 1em;
 
     ul {
         line-height: 40px;
